# gooddata-fuse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.Alpine  Makefile  README.md
doc/: Filesystem.md
graphics/: gooddata.hqx  gooddata.icns
scripts/docker/: build-local.sh  gooddata-fs-wrapper.sh  run-local.sh
src/: main.rs
src/fs/: constants.rs  filesystem.rs  inode.rs
src/fs/items/: item.rs  mod.rs  not_implemeted.rs  projects.rs  root.rs
src/fs/items/project/: feature_flags.rs  mod.rs  project_json.rs  user_permissions.rs  user_roles.rs
src/fs/items/project/ldm/: mod.rs
src/fs/items/project/metadata/: attributes.rs  facts.rs  helpers.rs  metrics.rs  mod.rs  report_definitions.rs  reports.rs
src/gd/: client.rs  connector.rs
src/object/: mod.rs  report_req.rs
src/object/account/: mod.rs  post_user_login.rs
src/object/metadata/: attribute.rs  display_form.rs  fact.rs  key.rs  metric.rs  mod.rs  project_dashboard.rs  report.rs  report_definition.rs
src/object/project/: mod.rs
src/object/traits/: mod.rs
tests/: gd.rs
